--- a/templates/index.html
+++ b/templates/index.html
@@ -1,24 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <title>Title</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-    <script type="text/javascript" charset="utf-8">
-    var socket = io();
-    socket.on('connect', function() {
-        socket.emit('my event', {data: 'I\'m connected!'});
-    });
-    </script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.4/jquery.min.js" integrity="sha512-pumBsjNRGGqkPzKHndZMaAG+bir374sORyzM3uulLV14lN5LyykqNk8eEeUlUkB3U0M4FApyaHraT65ihJhDpQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-</head>
-<body>
-    <div id="messages">
-
-    </div>
-    <input type="text" id="username" placeholder="Username">
-    <input type="text" id="message" placeholder="Message">
-    <button id="send">Send</button>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block content %}
+    <form method="post" class="buttons">
+        <h1>Enter The Chat Room</h1>
+        <div>
+            <label>Name:</label>
+            <input type="text" placeholder="Pick a name" name="name" value="{{name}}"/>
+        </div>
+        <div class="join">
+            <input type="text" placeholder="Room Code" name="code" value="{{code}}"/>
+            <button type="submit" name="join" >Join a Room</button>
+        </div>
+        <button type="submit" name="create" class="create-btn">Create a Room</button>
+        {% if error %}
+        <ul>
+            <li>
+                {{error}}
+            </li>
+        </ul>
+        {% endif %}
+    </form>
+{% endblock %}
