--- a/templates/index.html
+++ b/templates/index.html
@@ -19,4 +19,8 @@
         </ul>
         {% endif %}
     </form>
+    <h3>
+        want private messages?
+        then register
+    </h3>
 {% endblock %}
