--- a/templates/register.html
+++ b/templates/register.html
@@ -1,10 +1,6 @@
-{% extends "layout.html" %}
+{% extends "base.html" %}
 
-{% block title %}
-    Register
-{% endblock %}
-
-{% block main %}
+{% block content %}
     <form action="/register" method="post">
         <div class="mb-3">
             <input autocomplete="off" autofocus class="form-control mx-auto w-auto" id="username" name="username" placeholder="Username" type="text">
