--- a/templates/main.html
+++ b/templates/main.html
@@ -1,19 +1,5 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <title>Chat Site</title>
-    <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-    <script src="//code.jquery.com/jquery-1.11.1.js"></script>
-  </head>
-
-
-
-  <body>
-    <div class="content">
-      {% block content %} {% endblock %}
-    </div>
+{% extends 'base.html' %}
+{% block content %}
     <form method="post" class="buttons">
       <h1>Enter The Chat Room</h1>
       <div class="join">
@@ -24,26 +10,82 @@
       <h2>Invite a person to 1 on 1 chat room</h2>
       <input type="text" placeholder="username" name="username" id="username"/>
       <button type="button" name="invite" id="invite-btn"> Invite </button>
-      {% if error %}
-      <ul>
-        <li>{{error}}</li>
-      </ul>
-      {% endif %}
     </form>
+
+    <div id="popup" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; width: 400px; height: 300px; border: 1px solid black; padding: 10px;">
+      <h2 id="header-text">Popup Content</h2>
+      <p id="content-text">This is the content of the popup.</p>
+      <button onclick="acceptChat()">Accept</button>
+      <button onclick="closePopup()">Close</button>
+    </div>
+    <div id="invitation" style="display: none; position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); background-color: white; width: 400px; height: 300px; border: 1px solid black; padding: 10px;">
+      <h2>Invite sent</h2>
+      <p id="invitation-text">Waiting for person to respond</p>
+      <button onclick="closePopup()">Close</button>
+    </div>
+    
+    {% if error %}
+    <ul>
+      <li>{{error}}</li>
+    </ul>
+    {% endif %}
 
     <script type="text/javascript">
     var socketio = io()
           
+    var sender_username;
+
     $('#invite-btn').click(function() {
-    var username = $('#username').val();
-        socket.emit('invite', {username: username});
-        });
-          
-    socket.on('receive_invite', function(data) {
-    alert('You have been invited to chat by ' + data.sender);
+      username = $('#username').val();
+      if (!username) {
+        alert("Input field is empty")
+        return
+      }
+      socketio.emit('invite', {username: username});
+      document.getElementById("invitation-text").innerHTML = "Waiting for " + username + " to respond..."
+      document.getElementById("invitation").style.display = "block";
     });
-        
+    
+    function acceptChat() {
+      if (!sender_username) {
+        console.log("sender_username does not exist!!!!")
+      }
+      socketio.emit('begin_privatechat', {sender_username : sender_username, "sender_or_reciever" : "reciever"})
+    }
+
+    socketio.on('recipient_accept_invite', function(data) {
+      socketio.emit('begin_privatechat', {'room' : data.room, "sender_or_reciever" : "sender"})
+    });
+
+    socketio.on('redirect', function(data) {
+      window.location.href = data.url;
+  });
+
+    socketio.on('receive_invite', function(data) {
+    
+    alert(data);
+    sender_username = data['sender_username']
+    openPopup(data["message"])
+    });
+    
+    socketio.on('message', function(data) {
+      console.log("message recieved")
+      alert('You see the message')
+    })
+
+    function openPopup(data) {
+      // Show the popup by changing its CSS display property
+      document.getElementById("header-text").innerHTML = data + "has invited you to chat"
+      document.getElementById("popup").style.display = "block";
+    }
+    
+    function closePopup() {
+      // Hide the popup by changing its CSS display property
+      document.getElementById("popup").style.display = "none";
+      document.getElementById("invitation").style.display = "none";
+    }
+    
     </script>
   </body>
-</html>
+{% endblock %}
 
