--- a/templates/base.html
+++ b/templates/base.html
@@ -7,7 +7,23 @@
         <link rel="stylesheet" href="{{url_for('static', filename='css/style.css')}}"/>
         <script src="//code.jquery.com/jquery-1.11.1.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/4.0.1/socket.io.js" integrity="sha512-q/dWJ3kcmjBLU4Qc47E4A9kTB4m3wuTY7vkFJDTZKjTs8jhyGQnaUrxa0Ytd0ssMZhbNua9hE+E7Qv1j+DyZwA==" crossorigin="anonymous"></script>
-
+        <script>
+            const createMessage = (name, msg) => {
+                const content = `
+                <div class="text">
+                    <span>
+                        <strong>${name}</strong>: ${msg}
+                    </span>
+                    <span class="muted">
+                        ${new Date().toLocaleString()} <!-- Show local time, need to find better way cuz it shows the time when messages are recieved by the server not sent -->
+                    </span>
+                </div>
+                `;
+        
+                messages.innerHTML += content;
+        
+            };
+        </script>
     </head>
 
     <body>
