--- a/templates/room.html
+++ b/templates/room.html
@@ -1,8 +1,9 @@
 {% extends 'base.html' %}
 {% block content %}
-{% if current_user.is_authenticated and current_user.chatroom_id == room %}
+{% if current_user.is_authenticated and user_room == room %}
+<head><script src="{{ url_for('static', filename='private_chat_script.js') }}"></script></head>
     <div class="message-box">
-        <h2>Chat with {{sender,recipient}}</h2>
+        <h2>Chat with {{friend}}</h2>
         <div class="messages" id="messages"></div>
         <div class="inputs">
             <input type="text" rows="3" placeholder="Message" name="message" id="message"/>
@@ -11,12 +12,12 @@
     </div>
 {% for msg in room_messages %}
     <script type="text/javascript">
-        createMessage("{{ msg.username }}", "{{ msg.message }}");
+        createMessage("{{ msg[1] }}", "{{ msg[0] }}");
     </script>
 {% endfor %}
 
-<script src="{{ url_for('static', filename='private_chat_script.js') }}"></script>
 {% else %}
+<head><script src="{{ url_for('static', filename='public_chat_script.js') }}"></script></head>
     <div class="message-box">
         <h2>Chat Room: {{code}}</h2>
         <div class="messages" id="messages"></div>
@@ -25,13 +26,10 @@
             <button type="button" name="send" id="send-btn" onclick="sendMessage()"> Send </button>
         </div>
     </div>
-<script src="{{ url_for('static', filename='public_chat_script.js') }}"></script>
-{% for msg in messages %}
+{% for msg in sent_messages %}
     <script type="text/javascript">
         createMessage("{{msg.name}}", "{{msg.message}}")
     </script>
 {% endfor %}
-
 {% endif %}
-
 {% endblock %}
